feature: add recommendkyeword scrap